# DIFnDIF

./: .gitignore  Makefile  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: pipeline.yml
data/processed/: master_panel.parquet
data/raw/fundamentals/: quarterly_fundamentals.csv
data/raw/prices/: monthly_prices.csv
src/ingestion/: data_downloader.py
src/panels/: build_master.py
src/pipelines/: __init__.py
src/utils/: __init__.py  config.py  constants.py  data_loader.py
streamlit/: app.py
tests/: test_data_loader.py
